--- a/mortgages.Rmd
+++ b/mortgages.Rmd
@@ -101,20 +101,33 @@ where $a=1-\alpha dt$, $b=\alpha\theta dt$ and $\varepsilon = \sigma dW$ so that
 
 # Predicting (or generating) interest rates
 
-Here is a plot of Canada's overnight rate from 1960 to March 2024
+Here is a plot of the average 30 year mortgage rate in the US from 1971 to 2024
 
 ```{r, echo=TRUE, include=TRUE}
 # load data
-canadarates <- read.csv(file = "canadarates.csv")
-colnames(canadarates) <- c("date", "prime", "overnight")
-canadarates <- tail(canadarates, -26)
-dates <- as.Date(canadarates$date, format = "%d %B %Y")
-canadarates$date <- dates
+usrates <- read.csv(file = "MORTGAGE30US.csv")
+colnames(usrates) <- c("date", "rate")
+usrates$date <- base::as.Date(usrates$date, format = "%Y-%m-%d")
 
-ggplot(data = canadarates) +
-  geom_line(aes(x = date, y = overnight)) +
-  labs(title = "Canada's Overnight Rate", y = "Rate", x = "Date") +
+# fix data so it is evenly spaced
+# most of the data is every 7 days, but some of it is a difference of 5, 6, 8, or 9. 
+# If one of those days is Oct-19 and the previous observation is on Oct-14, I would change it to Oct-21 and assume that the average mortgage is the same on both of these days. There are so few of these days in the data that I don't think it will affect the analysis, it's just so that ts(...) doesn't scream at me later
+n = length(usrates$date)
+for (i in 2:n) {
+  usrates$date[i] = usrates$date[i - 1] + 7
+}
+
+# canadarates <- read.csv(file = "canadarates")
+# colnames(canadarates) <- c("date", "prime", "overnight")
+# canadarates <- tail(canadarates, -26)
+# dates <- base::as.Date(canadarates$date, format = "%d %B %Y")
+# canadarates$date <- dates
+
+usratesPlot <- ggplot(data = usrates) +
+  geom_line(aes(x = date, y = rate)) +
+  labs(title = "Average 30 year mortgage rate", y = "Rate", x = "Date") +
   theme_bw()
+usratesPlot
 ```
 
 This is the data we will use to generate our predictions.
@@ -147,16 +160,15 @@ cir <- function(alpha, theta, sigma, steps) {
 }
 ```
 
-To choose parameters that yield realistic interest rates, I used data of Canada's overnight rate from 1960 to March of 2024. I then ran a linear regression, predicting the last $n-1$ rates from the first $n-1$ rates. Using the formula from before to get the parameters from the coefficients. These parameters act as an initial guess for the MLE estimation which follows. I could have just stopped at the regression, but I wanted to use MLE to refine and hopefully improve the choice of parameters.
+To choose parameters that yield realistic interest rates, I used data of the average mortgage rate for 30 year mortgage in the US rate from April 1971 to October 2024. I then ran a linear regression, predicting the last $n-1$ rates from the first $n-1$ rates. Using the formula from before to get the parameters from the coefficients. These parameters act as an initial guess for the MLE estimation which follows. I could have just stopped at the regression, but I wanted to use MLE to refine and hopefully improve the choice of parameters.
 
 ```{r, echo=TRUE, include=TRUE}
-r = canadarates$overnight/100
+r = usrates$rate/100
 n = length(r)
 
-rates <- data.frame(date = dates, rate = r)
+rates <- data.frame(date = usrates$date, rate = r)
 
 # predicting last n-1 rates based on the first n-1 to fit CIR Model
-
 x <- r[-n]
 y = r[-1]/sqrt(x)
 
@@ -164,7 +176,6 @@ X <- matrix(c(x/sqrt(x), rep(1, n-1)/sqrt(x)), ncol=2)
 B <- solve(t(X)%*%X)%*%t(X)%*%y
 
 e <- y - X%*%B # for calculating standard error
-
 # r[t]/sqrt(r[t-1]) ~ a*r[t-1]/sqrt(r[t-1]) + b*(1/sqrt(r[t-1])) + ep
 # a = (1 - alpha*dt), b = alpha*theta*dt, ep = sigma*dW
 
@@ -173,7 +184,6 @@ b <- B[2]
 MSE <- (t(e)%*%e)[1,1]/(n-3)
 
 dt <- 1 # time step
-
 # initial parameters from least squares regression
 alpha = (1 - a)/dt # Long-term mean or equilibrium interest rate
 theta = b/(1 - a) # Speed of mean reversion
@@ -182,11 +192,8 @@ sigma <- sqrt(MSE)/sqrt(dt) # Volatility
 
 There are two ways to calculate the Log-Likelihood for the CIR model both of which are implemented in the file `functions.R`. The first involves the Bessel function, and the second involves Chi-Squared distribution.
 
-```{r, echo=TRUE, include=TRUE}
+```{r, echo=TRUE, include=TRUE, cache=TRUE}
 # Now refine the value of parameters with ML estimation
-
-# returns the ln Likelihood function for the CIR Model
-# enter the data and time step inside the function definition
 logLikelihood <- function(param) {
   result <- lnLhelper(param=param, data=r, dt=1)
   return(result)
@@ -198,7 +205,7 @@ MLE <- optim(c(alpha, theta, sigma), logLikelihood)$par
 
 Now that we have chosen parameters, we can generate samples.
 
-```{r, echo=TRUE, include=TRUE, out.width="75%"}
+```{r, echo=TRUE, include=TRUE, echo=FALSE}
 # Simulate the rates
 # Set number of simulation steps
 steps <- 300
@@ -245,9 +252,12 @@ What follows are different methods for predicting interest rates from past rates
 
 Now we will fit a linear model using OLS. We will try predicting the overnight rate $t$ months from now, using the rate now, and the rates every 6 months ago until we hit $t$ months ago. For example, we might predict the rate 18 months from now using the rates now, 6 months ago, 12 months ago, and 18 months ago.
 
-```{r}
-rate = canadarates$overnight
-date = canadarates$date
+Here is the residual plot, qq plot, and fitted model for $t=6$. The black dots are the data that the model was trained on, the gray dots are the data that model did not get to see in training. The blue lines are the fitted values, and the purple line is future predictions.
+
+\newpage
+```{r, include = TRUE}
+rate = usrates$rate
+date = usrates$date
 
 # want to predict t months into future (t should be divisible by 6)
 # coerce data into desired format
@@ -267,10 +277,10 @@ n <- length(rates$date)
 rates_test <- rates[(n-t+1):n,]
 rates <- rates[(1:(n-t)),]
 
-
 # regress `rate+t` on `rate+0`, `rate-6`, ..., `rate -(t-6), and `rate-t`
 model <- lm(`rate+t` ~. - date, data = rates)
-
+```
+```{r, echo =FALSE}
 # residual and qq plots
 residuals <- data.frame(fit = model$fitted.values, residuals = model$residuals)
 resplot <- ggplot(data = residuals) +
@@ -293,18 +303,14 @@ ggplot() +
   theme_bw()
 ```
 
-From the residuals and qq plots, the assumptions of a linear model do not seem to be met, and using a linear model does not seem justified. However, in all honesty the predictions aren't horrible.
+From the residuals and qq plots, the assumptions of a linear model do not seem to be met, and using a linear model does not seem justified. However, in all honesty the predictions are pretty good.
 
-But maybe if we transform our data, we can do an even better job.
+\newpage
+But maybe if we transform our data, we can do an even better job. Here we take the log of the rate to "mellow it out".
 
 ```{r}
-lambda = 20
-tr <- function(d) {
-  log(lambda + d)
-}
-
 rates_tr <- rates %>%
-  mutate(across(`rate+t`:`rate-6`, tr))
+  mutate(across(`rate+t`:`rate-6`, log))
 
 model <- lm(`rate+t` ~. -date, data = rates_tr)
 residuals <- data.frame(fit = model$fitted.values, residuals = model$residuals)
@@ -317,31 +323,21 @@ qqplot<- ggplot(residuals, aes(sample = residuals)) +
   theme_bw()
 cowplot::plot_grid(resplot, qqplot)
 ```
-From the residual and qqplots, it seems like this made our data a little bit more suited towards a linear model. I don't mind transforming the data in this way because I am not trying to use this model for any interpretations - just making predictions. We will choose a suitable value of lambda with cross validation.
 
-```{r}
-# find the value of lambda which results in the lowest cv score
-lambda = seq(0, 20, by = 0.5)
-cv <- transform_cv(rates, lambda, kfolds = 10, t = t)
-lambda.min = lambda[which(cv == min(cv))]
-```
+From the residual and qqplots, it seems like this made our data a little bit more suited towards a linear model. I don't mind transforming the data in this way because I am not trying to use this model for any interpretations - just making predictions.
 
-```{r}
-lambda = lambda.min
-tr <- function(d) {
-  log(lambda + d)
-}
+```{r, echo=FALSE}
 rates_tr <- rates %>%
-  mutate(across(`rate+t`:`rate-6`, tr))
+  mutate(across(`rate+t`:`rate-6`, log))
 model <- lm(`rate+t` ~. -date, data = rates_tr)
 
 rates_test_tr <- rates_test %>%
-    mutate(across(`rate+t`:`rate-6`, tr))
+    mutate(across(`rate+t`:`rate-6`, log))
 
 # plot fitted model + future predictions + actual values
 pred = data.frame(date = rates_test$date, 
-                  predictions = exp(predict(model, rates_test_tr)) - lambda)
-fit = data.frame(date = rates_tr$date, fits = (exp(model$fitted.values)-lambda))
+                  predictions = exp(predict(model, rates_test_tr)))
+fit = data.frame(date = rates_tr$date, fits = (exp(model$fitted.values)))
 ggplot() +
   geom_point(data = rates, mapping = aes(x = date, y = `rate+0`)) +
   geom_point(data = rates_test, mapping = aes(x = date, y = `rate+0`), colour = "gray") +
@@ -350,13 +346,10 @@ ggplot() +
   labs(title = paste("Predicting", t/12, "years into the future")) +
   theme_bw()
 ```
-
-The black dots are the data that the model was trained on, the gray dots are the data that model did not get to see in training. The blue lines are the fitted values, and the purple line is future predictions.
-
 We can see that the model does a pretty nice job of fitting the data! I would say slightly better than the untransformed version. And we even get some predictions for future interest rates in purple. Unfortunately, the further out we predict the worse our fit is.
 
-```{r}
-p1 <- OLS_t(6); p2 <- OLS_t(60); p3 <- OLS_t(90); p4 <- OLS_t(120)
+```{r, echo=FALSE}
+p1 <- OLS_t(12); p2 <- OLS_t(60); p3 <- OLS_t(90); p4 <- OLS_t(120)
 cowplot::plot_grid(p1, p2, p3, p4)
 ```
 
@@ -368,10 +361,64 @@ A better method is one that is tailored to time series data.
 
 ## Approach 3 - Predicting interest rates with Box-Jenkins
 
-This leads us to the Box-Jenkins Method.
+This leads us to the Box-Jenkins Method. 
 
-```{r}
+Essentially we look at some characteristics of the data, and try identify a decent model. We then perform parameter estimation for this model and finally evaluate the performance of the model. We can repeat this process as necessary to get a model that predicts well.
 
+We will use the `zoo` package to handle the time series data. 
+
+It's clear from looking at the plot of the rate that the data isn't stationary. And the autocorrelation plot agrees, as it decays very slowly. We can try log-differencing the data to see if that helps and indeed it does.
+
+```{r, message=FALSE, echo=FALSE, fig.height = 4}
+library(zoo)
+rawrates <- zoo(usrates$rate, order.by = usrates$date)
+
+n = length(rawrates)
+
+rawACF <- acf(rawrates, plot = FALSE, lag.max = 60)
+rawACFplot <- ggplot(data = with(rawACF, data.frame(lag, acf)), 
+                     mapping = aes(x = lag, y = acf)) + 
+  geom_hline(aes(yintercept = 0)) +
+  geom_segment(mapping = aes(xend = lag, yend = 0)) +
+  geom_hline(aes(yintercept = 1.96/sqrt(n)), linetype = "dashed", colour = "blue") +
+  geom_hline(aes(yintercept = -1.96/sqrt(n)), linetype = "dashed", colour = "blue") +
+  labs(title = "Raw ACF plot") +
+  theme_bw()
+rawPACF <- pacf(rawrates, plot = FALSE, lag.max = 60)
+rawPACFplot <- ggplot(data = with(rawPACF, data.frame(lag, acf)), 
+                      mapping = aes(x = lag, y = acf)) + 
+  geom_hline(aes(yintercept = 0)) +
+  geom_hline(aes(yintercept = 1.96/sqrt(n)), linetype = "dashed", colour = "blue") +
+  geom_hline(aes(yintercept = -1.96/sqrt(n)), linetype = "dashed", colour = "blue") +
+  geom_segment(mapping = aes(xend = lag, yend = 0)) +
+  labs(title = "Raw PACF plot") +
+  theme_bw()
+
+s <- 12 # difference period
+rates <- diff(log(rawrates), lag = s)
+n = length(rates)
+
+ACF <- acf(rates, plot = FALSE, lag.max = 160)
+ACFplot <- ggplot(data = with(ACF, data.frame(lag, acf)), 
+                  mapping = aes(x = lag, y = acf)) + 
+  geom_hline(aes(yintercept = 0)) +
+  geom_segment(mapping = aes(xend = lag, yend = 0)) +
+  geom_hline(aes(yintercept = 1.96/sqrt(n)), linetype = "dashed", colour = "blue") +
+  geom_hline(aes(yintercept = -1.96/sqrt(n)), linetype = "dashed", colour = "blue") +
+  labs(title = "Differenced ACF plot") +
+  theme_bw()
+PACF <- pacf(rates, plot = FALSE, lag.max = 160)
+PACFplot <- ggplot(data = with(PACF, data.frame(lag, acf)), 
+                   mapping = aes(x = lag, y = acf)) + 
+  geom_hline(aes(yintercept = 0)) +
+  geom_segment(mapping = aes(xend = lag, yend = 0)) +
+  geom_hline(aes(yintercept = 1.96/sqrt(n)), linetype = "dashed", colour = "blue") +
+  geom_hline(aes(yintercept = -1.96/sqrt(n)), linetype = "dashed", colour = "blue") +
+  labs(title = "Differenced PACF plot") +
+  theme_bw()
+  
+cowplot::plot_grid(rawACFplot, rawPACFplot, nrow=2)
+cowplot::plot_grid(ACFplot, PACFplot, nrow=2) #MA1?
 ```
 
 A disadvantage of this method is that there isn't really a programatic way of predicting future rates given some history. We need to redo the entire analysis.
