--- a/mortgages.Rmd
+++ b/mortgages.Rmd
@@ -110,18 +110,10 @@ colnames(usrates) <- c("date", "rate")
 usrates$date <- base::as.Date(usrates$date, format = "%Y-%m-%d")
 
 # fix data so it is evenly spaced
-# most of the data is every 7 days, but some of it is a difference of 5, 6, 8, or 9. 
-# If one of those days is Oct-19 and the previous observation is on Oct-14, I would change it to Oct-21 and assume that the average mortgage is the same on both of these days. There are so few of these days in the data that I don't think it will affect the analysis, it's just so that ts(...) doesn't scream at me later
 n = length(usrates$date)
 for (i in 2:n) {
   usrates$date[i] = usrates$date[i - 1] + 7
 }
-
-# canadarates <- read.csv(file = "canadarates")
-# colnames(canadarates) <- c("date", "prime", "overnight")
-# canadarates <- tail(canadarates, -26)
-# dates <- base::as.Date(canadarates$date, format = "%d %B %Y")
-# canadarates$date <- dates
 
 usratesPlot <- ggplot(data = usrates) +
   geom_line(aes(x = date, y = rate)) +
@@ -132,140 +124,20 @@ usratesPlot
 
 This is the data we will use to generate our predictions.
 
-## Approach 1 - Generating plausible interest rates
+## Approach 1 - Predicting interest rates with a linear model
 
-Rather than trying to make predictions about future interest rates from previous rates, what if we had access to the distribution of interest rate trajectories? Then we could check how often in this distribution is, for example, the total cost of a mortgage more than double the principal?
-
-In some sense we are trying to estimate the distribution of a vector in $\mathbb{R}^T$ where $T$ is the number of rates we have observed, and each component is likely highly correlated with each other. And all from a single observation! When I write it down like this it seems fruitless... When I first started this project I didn't have as clear an understanding of what I was doing. In any case here are the results of this first approach.
-
-I chose to use a CIR model to avoid negative interest rates. However, due to errors introduced by the discretization, I added a step of taking the absolute value. The function for simulating a CIR model is below.
-
-```{r, echo=TRUE, include=TRUE}
-cir <- function(alpha, theta, sigma, steps) {
-  dt <- 1 # time step
-  
-  r <- vector(length=steps)
-  r[1] <- theta # initial interest rate
-  # r[1] <- 5 # could choose any initial rate we want
-  
-  
-  for (i in 2:steps) {
-    dW <- rnorm(1, mean=0, sd=1) # generate random noise
-    
-    r[i] <- abs(r[i-1] + alpha*(theta - r[i-1])*dt +      # modified euler
-                  sigma*sqrt(r[i-1])*dt*dW) 
-  }
-  
-  return(r)
-}
-```
-
-To choose parameters that yield realistic interest rates, I used data of the average mortgage rate for 30 year mortgage in the US rate from April 1971 to October 2024. I then ran a linear regression, predicting the last $n-1$ rates from the first $n-1$ rates. Using the formula from before to get the parameters from the coefficients. These parameters act as an initial guess for the MLE estimation which follows. I could have just stopped at the regression, but I wanted to use MLE to refine and hopefully improve the choice of parameters.
-
-```{r, echo=TRUE, include=TRUE}
-r = usrates$rate/100
-n = length(r)
-
-rates <- data.frame(date = usrates$date, rate = r)
-
-# predicting last n-1 rates based on the first n-1 to fit CIR Model
-x <- r[-n]
-y = r[-1]/sqrt(x)
-
-X <- matrix(c(x/sqrt(x), rep(1, n-1)/sqrt(x)), ncol=2)
-B <- solve(t(X)%*%X)%*%t(X)%*%y
-
-e <- y - X%*%B # for calculating standard error
-# r[t]/sqrt(r[t-1]) ~ a*r[t-1]/sqrt(r[t-1]) + b*(1/sqrt(r[t-1])) + ep
-# a = (1 - alpha*dt), b = alpha*theta*dt, ep = sigma*dW
-
-a <- B[1]
-b <- B[2]
-MSE <- (t(e)%*%e)[1,1]/(n-3)
-
-dt <- 1 # time step
-# initial parameters from least squares regression
-alpha = (1 - a)/dt # Long-term mean or equilibrium interest rate
-theta = b/(1 - a) # Speed of mean reversion
-sigma <- sqrt(MSE)/sqrt(dt) # Volatility
-```
-
-There are two ways to calculate the Log-Likelihood for the CIR model both of which are implemented in the file `functions.R`. The first involves the Bessel function, and the second involves Chi-Squared distribution.
-
-```{r, echo=TRUE, include=TRUE, cache=TRUE}
-# Now refine the value of parameters with ML estimation
-logLikelihood <- function(param) {
-  result <- lnLhelper(param=param, data=r, dt=1)
-  return(result)
-}
-
-# optimize using optim()
-MLE <- optim(c(alpha, theta, sigma), logLikelihood)$par
-```
-
-Now that we have chosen parameters, we can generate samples.
-
-```{r, echo=TRUE, include=TRUE, echo=FALSE}
-# Simulate the rates
-# Set number of simulation steps
-steps <- 300
-
-# choose which parameters to use
-param <- MLE
-
-# Create time vector
-time <- 1:steps
-
-# Create data frame to store trajectories
-trajectories <- as.data.frame(c(time))
-
-# Choose how many simulated trajectories to generate 
-N <- 5
-
-# Run loop to generate N different simulated trajectories
-for (i in 1:N) {
-  trajectories <- cbind(trajectories, cir(param[1], param[2], param[3], steps))
-}
-colnames(trajectories) <- c('time', paste("trajectory", 1:N, sep = "")) # rename columns
-
-# for plotting purposes in ggplot
-trajectories <- melt(trajectories, id.vars = 'time', variable.name = 'trajectory')
-
-ggplot(data = trajectories, aes(time, value)) +
-  geom_line(aes(colour = trajectory)) +
-  geom_hline(yintercept = param[2], linetype = "dashed") +
-  xlab("Time") +
-  ylab("Interest Rate") +
-  ggtitle("CIR Interest Rate Monte Carlo Simulation") +
-  theme_bw()
-```
-
-If the resulting samples do a good job of characterizing the true distribution of the interest rates, then I really like this approach. (This is something worth trying to prove yes or no).
-
-Another approach is to try and make predictions. Instead of thinking about the distribution of all possible trajectories, think about what the future interest rates will be given the current and previous ones.
-
-What follows are different methods for predicting interest rates from past rates.
-
-## Approach 2 - Predicting interest rates with a linear model
-
-<!-- I should just split the data into a "train" and "test" set -->
-
-Now we will fit a linear model using OLS. We will try predicting the overnight rate $t$ months from now, using the rate now, and the rates every 6 months ago until we hit $t$ months ago. For example, we might predict the rate 18 months from now using the rates now, 6 months ago, 12 months ago, and 18 months ago.
+We will fit a linear model using OLS. We will try predicting the overnight rate $t$ months from now, using the rate now, and the rates every 6 months ago until we hit $t$ months ago. For example, we might predict the rate 18 months from now using the rates now, 6 months ago, 12 months ago, and 18 months ago.
 
 Here is the residual plot, qq plot, and fitted model for $t=6$. The black dots are the data that the model was trained on, the gray dots are the data that model did not get to see in training. The blue lines are the fitted values, and the purple line is future predictions.
 
-\newpage
 ```{r, include = TRUE}
 rate = usrates$rate
 date = usrates$date
-
 # want to predict t months into future (t should be divisible by 6)
 # coerce data into desired format
 t <- 6
 n = length(rate)
-date = date[(t+1):(n-t)]
-`rate+0` = rate[(t+1):(n-t)]
-`rate+t` = rate[(2*t+1):n]
+date = date[(t+1):(n-t)]; `rate+0` = rate[(t+1):(n-t)]; `rate+t` = rate[(2*t+1):n]
 rates <- cbind.data.frame(date, `rate+t`, `rate+0`)
 # rate-t, ... rate-(t-6), ... rate-6
 for (i in 1:(t/6)) {
@@ -273,14 +145,13 @@ for (i in 1:(t/6)) {
 }
 colnames(rates) <- c('date', 'rate+t', 'rate+0', paste("rate-", seq(t, 6, by=-6), sep=""))
 n <- length(rates$date)
-
 rates_test <- rates[(n-t+1):n,]
 rates <- rates[(1:(n-t)),]
 
 # regress `rate+t` on `rate+0`, `rate-6`, ..., `rate -(t-6), and `rate-t`
 model <- lm(`rate+t` ~. - date, data = rates)
 ```
-```{r, echo =FALSE}
+```{r, fig.height = 4, echo =FALSE}
 # residual and qq plots
 residuals <- data.frame(fit = model$fitted.values, residuals = model$residuals)
 resplot <- ggplot(data = residuals) +
@@ -357,73 +228,119 @@ This is unsurprising since to predict further, we need to essentially shrink our
 
 Overall I'm not a huge fan of this approach. It makes sense that subsequent interest rates would be correlated, so because of the way we set up the model, we shouldn't really make the assumption of independent predictors (which we implicitly have to by using OLS). And the predictions just aren't very useful if we go far out.
 
-A better method is one that is tailored to time series data.
+\newpage
+## Approach 2 - Generating plausible interest rates
 
-## Approach 3 - Predicting interest rates with Box-Jenkins
+Rather than trying to make predictions about future interest rates from previous rates, what if we had access to the distribution of interest rate trajectories? Then we could check how often in this distribution is, for example, the total cost of a mortgage more than double the principal?
 
-This leads us to the Box-Jenkins Method. 
+In some sense we are trying to estimate the distribution of a vector in $\mathbb{R}^T$ where $T$ is the number of rates we have observed, and each component is likely highly correlated with each other. And all from a single observation! When I write it down like this it seems fruitless... When I first started this project I didn't have as clear an understanding of what I was doing. In any case here are the results of this first approach.
 
-Essentially we look at some characteristics of the data, and try identify a decent model. We then perform parameter estimation for this model and finally evaluate the performance of the model. We can repeat this process as necessary to get a model that predicts well.
+We can use SDEs to model the process.
 
-We will use the `zoo` package to handle the time series data. 
+I chose to use a CIR model to avoid negative interest rates. However, due to errors introduced by the discretization, I added a step of taking the absolute value. The function for simulating a CIR model is below.
 
-It's clear from looking at the plot of the rate that the data isn't stationary. And the autocorrelation plot agrees, as it decays very slowly. We can try log-differencing the data to see if that helps and indeed it does.
-
-```{r, message=FALSE, echo=FALSE, fig.height = 4}
-library(zoo)
-rawrates <- zoo(usrates$rate, order.by = usrates$date)
-
-n = length(rawrates)
-
-rawACF <- acf(rawrates, plot = FALSE, lag.max = 60)
-rawACFplot <- ggplot(data = with(rawACF, data.frame(lag, acf)), 
-                     mapping = aes(x = lag, y = acf)) + 
-  geom_hline(aes(yintercept = 0)) +
-  geom_segment(mapping = aes(xend = lag, yend = 0)) +
-  geom_hline(aes(yintercept = 1.96/sqrt(n)), linetype = "dashed", colour = "blue") +
-  geom_hline(aes(yintercept = -1.96/sqrt(n)), linetype = "dashed", colour = "blue") +
-  labs(title = "Raw ACF plot") +
-  theme_bw()
-rawPACF <- pacf(rawrates, plot = FALSE, lag.max = 60)
-rawPACFplot <- ggplot(data = with(rawPACF, data.frame(lag, acf)), 
-                      mapping = aes(x = lag, y = acf)) + 
-  geom_hline(aes(yintercept = 0)) +
-  geom_hline(aes(yintercept = 1.96/sqrt(n)), linetype = "dashed", colour = "blue") +
-  geom_hline(aes(yintercept = -1.96/sqrt(n)), linetype = "dashed", colour = "blue") +
-  geom_segment(mapping = aes(xend = lag, yend = 0)) +
-  labs(title = "Raw PACF plot") +
-  theme_bw()
-
-s <- 12 # difference period
-rates <- diff(log(rawrates), lag = s)
-n = length(rates)
-
-ACF <- acf(rates, plot = FALSE, lag.max = 160)
-ACFplot <- ggplot(data = with(ACF, data.frame(lag, acf)), 
-                  mapping = aes(x = lag, y = acf)) + 
-  geom_hline(aes(yintercept = 0)) +
-  geom_segment(mapping = aes(xend = lag, yend = 0)) +
-  geom_hline(aes(yintercept = 1.96/sqrt(n)), linetype = "dashed", colour = "blue") +
-  geom_hline(aes(yintercept = -1.96/sqrt(n)), linetype = "dashed", colour = "blue") +
-  labs(title = "Differenced ACF plot") +
-  theme_bw()
-PACF <- pacf(rates, plot = FALSE, lag.max = 160)
-PACFplot <- ggplot(data = with(PACF, data.frame(lag, acf)), 
-                   mapping = aes(x = lag, y = acf)) + 
-  geom_hline(aes(yintercept = 0)) +
-  geom_segment(mapping = aes(xend = lag, yend = 0)) +
-  geom_hline(aes(yintercept = 1.96/sqrt(n)), linetype = "dashed", colour = "blue") +
-  geom_hline(aes(yintercept = -1.96/sqrt(n)), linetype = "dashed", colour = "blue") +
-  labs(title = "Differenced PACF plot") +
-  theme_bw()
+```{r, echo=TRUE, include=TRUE}
+cir <- function(alpha, theta, sigma, steps) {
+  dt <- 1 # time step
   
-cowplot::plot_grid(rawACFplot, rawPACFplot, nrow=2)
-cowplot::plot_grid(ACFplot, PACFplot, nrow=2) #MA1?
+  r <- vector(length=steps)
+  r[1] <- theta # initial interest rate
+  # r[1] <- 5 # could choose any initial rate we want
+  
+  
+  for (i in 2:steps) {
+    dW <- rnorm(1, mean=0, sd=1) # generate random noise
+    
+    r[i] <- abs(r[i-1] + alpha*(theta - r[i-1])*dt +      # modified euler
+                  sigma*sqrt(r[i-1])*dt*dW) 
+  }
+  
+  return(r)
+}
 ```
 
-A disadvantage of this method is that there isn't really a programatic way of predicting future rates given some history. We need to redo the entire analysis.
+To choose parameters that yield realistic interest rates, I used data of the average mortgage rate for 30 year mortgage in the US rate from April 1971 to October 2024. I then ran a linear regression, predicting the last $n-1$ rates from the first $n-1$ rates. Using the formula from before to get the CIR parameters from the OLS coefficients. These parameters act as an initial guess for the MLE estimation which follows. I could have just stopped at the regression, but I wanted to use MLE to refine and hopefully improve the choice of parameters.
 
-## Approach 4 - Revisiting approach 1 (resampling over shorter periods)
+```{r, echo=TRUE, include=TRUE}
+r = usrates$rate/100
+n = length(r)
+rates <- data.frame(date = usrates$date, rate = r)
+
+# predicting last n-1 rates based on the first n-1 to fit CIR Model
+x <- r[-n]
+y = r[-1]/sqrt(x)
+
+X <- matrix(c(x/sqrt(x), rep(1, n-1)/sqrt(x)), ncol=2)
+B <- solve(t(X)%*%X)%*%t(X)%*%y
+e <- y - X%*%B # for calculating standard error
+# r[t]/sqrt(r[t-1]) ~ a*r[t-1]/sqrt(r[t-1]) + b*(1/sqrt(r[t-1])) + ep
+# a = (1 - alpha*dt), b = alpha*theta*dt, ep = sigma*dW
+
+a <- B[1]
+b <- B[2]
+MSE <- (t(e)%*%e)[1,1]/(n-3)
+
+dt <- 1 # time step
+# initial parameters from least squares regression
+alpha = (1 - a)/dt # Long-term mean or equilibrium interest rate
+theta = b/(1 - a) # Speed of mean reversion
+sigma <- sqrt(MSE)/sqrt(dt) # Volatility
+```
+
+There are two ways to calculate the Log-Likelihood for the CIR model both of which are implemented in the file `functions.R` (though I am using the "Bessel" version here).
+
+```{r, echo=TRUE, include=TRUE, cache=TRUE}
+# Now refine the value of parameters with ML estimation
+logLikelihood <- function(param) {
+  result <- lnLhelper(param=param, data=r, dt=1)
+  return(result)
+}
+
+# optimize using optim()
+MLE <- optim(c(alpha, theta, sigma), logLikelihood)$par
+```
+
+Now that we have chosen parameters, we can generate samples.
+
+```{r, echo=TRUE, include=TRUE, echo=FALSE}
+# Simulate the rates
+# Set number of simulation steps
+steps <- 300 # each step should be thought of as 1 week
+
+# choose which parameters to use
+param <- MLE
+
+# Create time vector
+time <- 1:steps
+
+# Create data frame to store trajectories
+trajectories <- as.data.frame(c(time))
+
+# Choose how many simulated trajectories to generate 
+N <- 5
+
+# Run loop to generate N different simulated trajectories
+for (i in 1:N) {
+  trajectories <- cbind(trajectories, cir(param[1], param[2], param[3], steps))
+}
+colnames(trajectories) <- c('time', paste("trajectory", 1:N, sep = "")) # rename columns
+
+# for plotting purposes in ggplot
+trajectories <- melt(trajectories, id.vars = 'time', variable.name = 'trajectory')
+
+ggplot(data = trajectories, aes(time, value)) +
+  geom_line(aes(colour = trajectory)) +
+  geom_hline(yintercept = param[2], linetype = "dashed") +
+  xlab("Time") +
+  ylab("Interest Rate") +
+  ggtitle(paste("CIR Interest Rate Monte Carlo Simulation (N=", N, ")", sep = "")) +
+  theme_bw() +
+  theme(legend.position = "none")
+```
+
+If the resulting samples do a good job of characterizing the true distribution of the interest rates, then I really like this approach. (This is something worth trying to prove yes or no).
+
+## Approach 3 - Revisiting approach 2 (resampling over shorter periods)
 
 # Results of the various approaches
 
